[bugfix/22086] Adjust the alignment in the home category items.

--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -216,7 +216,9 @@
     &--mobile-home-categories-showcase {
       display: flex;
       position: relative;
-      transform: translateY(14px);
+      @include breakpoint('mobile') {
+        transform: translateY(14px);
+      }
 
       :global(.vtex-store-components-3-x-imageElement) {
         margin: 0 auto;
